# iconv

./: .gitignore  CMakeLists.txt
lib/: CMakeLists.txt  genflags.c  gentranslit.c
preload/: CMakeLists.txt
src/: CMakeLists.txt
srclib/: CMakeLists.txt
tests/: CMakeLists.txt
